# brain-os

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MCP_INTEGRATION_GUIDE.md  OBSIDIAN_SETUP.md  README.md  brainos_interactive.py  brainos_server.py  claude_desktop_config_example.json  docker-compose-test.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  remote_brainos_client.py  run_server.py  simple_brainos_client.py  test-local.bat  test_all_tools.py  test_import.py  test_phase3.py  test_remote_connection.py
docs/: COMPLETE_USER_GUIDE.md  TESTING_GUIDE.md  TESTING_PLAN.md  TOOLS.md
docs/libraries/: groq.md  pocketflow_docs.md
docs/obsidian/: README.md  phase1_user_stories.md  phase2_user_stories.md  phase3_user_stories.md
docs/project/: full_project_idea.md
fastmcp_demo_app/: my_server.py  test_client.py
ignore/: Self-Evolving Search Agents without Training Data.md  SimpleMem.md  agem.md  claude-research.md  memgptletta.md  memoryImprovements.md  memrl.md
obsidian/: README.md  phase3_user_stories.md
obsidian-mcp/: Dockerfile  server.mjs
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  summarize_agent.py
src/core/: config.py
src/database/: __init__.py  connection.py  queries.py
src/flows/: __init__.py  contextual_retrieval.py  instinctive_activation.py  query_memories.py  summarize_project.py
src/tasks/: __init__.py  background.py
src/tools/: __init__.py  memory_tools.py
src/utils/: __init__.py  entity_naming.py  llm.py  notifications.py  observability.py  obsidian_client.py  (+1 more)
tests/: conftest.py
(+51 files in other folders)
