[project]
name = "0brainos"
version = "0.1.0"
description = "Cognitive Operating System for Personal and Professional Intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.2",
    "neo4j>=5.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "groq>=0.11.0",
    "openai>=1.57.0",
    "pocketflow>=0.0.3",
    "httpx>=0.27.0",
    "arize-phoenix-otel>=0.1.0",
]

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."